bug "on ios browsers" fixes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -167,6 +167,10 @@ section {
   display: block;
   padding-bottom: 0.1rem;
   cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .container-input .label1 {
   border-bottom: 6px solid rgba(255, 0, 0, 0.7);
@@ -184,6 +188,10 @@ section {
   box-shadow: inset 0 0 5px #acacac;
   width: 86px;
   border: 2px solid #616161;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: none;
 }
 .container-input input[type=number]::-webkit-inner-spin-button, .container-input input[type=number]::-webkit-outer-spin-button {
   display: none;
@@ -201,6 +209,10 @@ section {
   --spin-height: 40.5px;
   min-width: var(--spin-width, 40.5px);
   min-height: var(--spin-height, 40.5px);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   cursor: pointer;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
