--- a/scss/utilities/_container-input.scss
+++ b/scss/utilities/_container-input.scss
@@ -13,6 +13,7 @@
 		display: block;
 		padding-bottom: 0.1rem;
 		cursor: pointer;
+		user-select: none;
 	}
 	.label1 {
 		border-bottom: 6px solid $firstBox;
@@ -29,10 +30,14 @@
 		font-size: 1rem;
 		padding: 0.3rem 0.5rem;
 		box-shadow: inset 0 0 5px rgb(172, 172, 172);
-		//maybe width is better??
 		width: 86px;
 		border: 2px solid $gray;
 
+		//ios stuff (╯‵□′)╯︵┻━┻
+		appearance: none;
+		border-radius: none;
+
+		//chrome stuff
 		&::-webkit-inner-spin-button,
 		&::-webkit-outer-spin-button {
 			display: none;
@@ -58,7 +63,12 @@
 		min-width: var(--spin-width, 40.5px);
 		min-height: var(--spin-height, 40.5px);
 
+		//mobile stuff
+		user-select: none;
+
 		cursor: pointer;
+
+		//chrome stuff
 		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 		-webkit-tap-highlight-color: transparent;
 
